# platzi-web-scraping-python

./: .gitignore  README.md  environment.yml  pyproject.toml
data/raw/: products.csv  products_csv_file.csv  products_excel_file.xlsx  products_json_file.json  products_with_errors.csv
notebooks/: 01_jss_first_scraping.ipynb  02_jss_pages.ipynb  03_jss_dynamic.ipynb  04_jss_login.ipynb
references/: 1__mi_primer_scraper.ipynb  2__paginación_y_múltiples_páginas.ipynb  3__página_interactiva.ipynb  4__scroll_infinito.ipynb  5__formulario.ipynb  6__página_interactiva_playwright.py  7__scroll_infinito_playwright.py  8__formulario_playwright_1.py
utils/: paths.py
