[project]
name = "platzi-web-screaping-python"
version = "0.1.0"
description = "Web Screaping with Python"
authors = [{ name = "Jason", email = "jasonssdev@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel",
    "jupyter",
    "requests",
    "beautifulsoup4",
    "pandas",
    "openpyxl",
    "webdriver-manager",
    "selenium",
    "undetected-chromedriver",
    "playwright",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
